<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
  <item type="id" name="navigation_bar_item_icon_container"/>
  <item type="id" name="navigation_bar_item_active_indicator_view"/>
  <item type="id" name="navigation_bar_item_icon_view" />
  <item type="id" name="navigation_bar_item_labels_group" />
  <item type="id" name="navigation_bar_item_small_label_view" />
  <item type="id" name="navigation_bar_item_large_label_view" />
  <item type="id" name="navigation_bar_item_content_container" />
  <item type="id" name="navigation_bar_item_inner_content_container" />
</resources>
