...

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

  <com.google.android.material.bottomnavigation.BottomNavigationView
      android:id="@+id/bottom_navigation"
      android:layout_width="match_parent"
      android:layout_height="56dp"
      android:layout_gravity="bottom"
      app:itemBackground="@color/sand_default"
      app:itemIconTint="@color/emerald_translucent"
      app:itemTextColor="@color/emerald_text"
...
